api-posts-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-posts
  namespace: master
spec:
  selector:
    app: api-posts
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4567
