posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-posts
  namespace: blogr
  labels:
    app: api-posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-posts
  template:
    metadata:
      labels:
        app: api-posts
    spec:
      containers:
        - name: api-posts
          image: index.docker.io/dniel/api-posts
          ports:
            - containerPort: 4567
---
kind: Service
apiVersion: v1
metadata:
  name: api-posts
  namespace: blogr
spec:
  selector:
    app: api-posts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4567
