www-posts-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: www
  namespace: blogr
spec:
  selector:
    app: www
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
