graphql-ingress-se.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-graphql
  namespace: blogr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: api-graphql.dniel.se
      http:
        paths:
          - backend:
              serviceName: api-graphql
              servicePort: 80
