graphql.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: api-graphql
  name: api-graphql
  namespace: blogr
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: api-graphql
  template:
    metadata:
      labels:
        app: api-graphql
    spec:
      containers:
        - image: index.docker.io/dniel/api-graphql
          name: api-graphql
          ports:
            - containerPort: 8080
          livenessProbe:
            periodSeconds: 3
            tcpSocket:
              port: 8080
          readinessProbe:
            periodSeconds: 3
            httpGet:
              path: /system/health
              port: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: api-graphql
  namespace: blogr
spec:
  selector:
    app: api-graphql
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-graphql
  namespace: blogr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api-graphql.dniel.se
    http:
      paths:
      - backend:
          serviceName: api-graphql
          servicePort: 80
