traefik-dash-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.dniel.in
      http:
        paths:
          - backend:
              serviceName: traefik2
              servicePort: 9000
