whoami.yaml
---
# Source: whoami/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
    chart: whoami-0.1.0
    release: whoami
    heritage: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: whoami
    release: whoami
---
# Source: whoami/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
    chart: whoami-0.1.0
    release: whoami
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
      release: whoami
  template:
    metadata:
      labels:
        app: whoami
        release: whoami
    spec:
      containers:
        - name: whoami
          image: index.docker.io/containous/whoami
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: whoami/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
  annotations:
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://forwardauth/authorize
    ingress.kubernetes.io/auth-response-headers: Authorization,X-FORWARDAUTH-NAME,X-FORWARDAUTH-SUB,X-FORWARDAUTH-EMAIL
  labels:
    app: whoami
    chart: whoami-0.1.0
    release: whoami
    heritage: Tiller
spec:
  rules:
    - host: whoami.dniel.se
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami
              servicePort: http
