www.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: www
  name: www
  namespace: blogr
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
        - image: index.docker.io/dniel/blogr-www
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          name: blogr-www
          ports:
            - containerPort: 80
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: www
  namespace: blogr
spec:
  selector:
    app: www
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www
  namespace: blogr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.dniel.se
    http:
      paths:
      - backend:
          serviceName: www
          servicePort: 80
